src/test/deca/context/invalid/cast_invalid_type.deca
// Description :
//    Cast de type invalid
//
// Resultats :
//    Erreur contextuelle
//    Ligne 9 : Type bool non déclaré

{
    int a;
    a = (boolean)(1);
}
